# manga_downloader

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  docker-compose.yml  manga_downloader.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pre-commit.yml
docker/: Dockerfile
manga_provider/: generic.py  mangahost.py
tests/: test_manga_downloader.py  test_manga_host.py  test_site.html
util/: docker.py  manga.py  pdf.py  search_render.py  settings.py  utils.py
