[tool.poetry]
name = "manga-downloader"
version = "0.0.1"
description = "As the name says, its a project that downloads manga."
authors = ["Your Name <you@example.com>"]
license = "MIT License Copyright (c) 2022 Christian Franchin dos Santos"
readme = "README.md"
packages = [{include = "manga_downloader"}]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^5.0.4"
black = "^22.10.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
termcolor = "^2.0.1"
tqdm = "^4.64.1"
Pillow = "^9.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
